--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
 </head>
 <body>
     <header>
-        
+        <!-- navbar section -->
+        <nav class="w-11/12 mx-auto flex justify-between items-center py-5 border-b-3 border-b-[#17171720]">
+            <div>
+                <img src="asets/Logo.png" alt="">
+            </div>
+            <div>
+                <button class="btn">Sort by view</button>
+            </div>
+            <div>
+                <button class="btn bg-red-500 text-white">Blog</button>
+            </div>
+        </nav>
+        <!-- categories btn section -->
+        <div id="category-container" class="flex justify-center items-center gap-4 py-5">
+            <div>
+                <button class="btn">All</button>
+            </div>
+        </div>
     </header>
     <main>
 
@@ -24,5 +41,6 @@
     <footer>
 
     </footer>
+    <script src="script/index.js"></script>
 </body>
 </html>
