--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- font-awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- common style -->
-     <style>
+    <style>
 
-     </style>
+    </style>
 </head>
+
 <body>
     <header>
         <!-- navbar section -->
@@ -31,16 +35,41 @@
         <!-- categories btn section -->
         <div id="category-container" class="flex justify-center items-center gap-4 py-5">
             <div>
-                <button class="btn">All</button>
+                <button class="btn bg-[#FF1F3D] text-white">All</button>
             </div>
         </div>
     </header>
-    <main>
+    <main id="videos-container" class=" w-11/12 mx-auto grid md:grid-cols-2 lg:grid-cols-4 gap-5">
 
+        <!-- <div class="shadow-sm">
+            <div class="relative w-full">
+                <div class="relative">
+                    <img class="w-full" src="asets/Rectangle 1.png" alt="">
+                    <p class="absolute right-2 bottom-2 text-white bg-black rounded p-1">3hrs 56 min ago</p>
+                </div>
+            </div>
+
+            <div class="py-5 flex gap-5 items-start">
+                <div>
+                    <img class="w-[100px]" src="asets/Ellipse 1.png" alt="">
+                </div>
+                <div class="flex flex-col gap-2">
+                    <h2 class="text-xl font-semibold">Building a Winning UX Strategy Using the Kano Model</h2>
+                    <div class="flex gap-3 items-center">
+                        <p class="text-gray-500">Awlad Hossain</p>
+                        <img src="asets/Group 3.png" alt="">
+                    </div>
+                    <p class="text-gray-500">91K views</p>
+                </div>
+            </div>
+        </div>
+        -->
+      
     </main>
     <footer>
 
     </footer>
     <script src="script/index.js"></script>
 </body>
+
 </html>
