--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             background-color: #FF1F3D;
             color: white;
         }
+        #videos-container > div{
+            border-radius: 10px;
+            overflow: hidden;
+        }
     </style>
 </head>
 
@@ -42,7 +46,7 @@
             </div>
         </div>
     </header>
-    <main id="videos-container" class=" w-11/12 mx-auto grid md:grid-cols-2 lg:grid-cols-4 gap-5">
+    <main id="videos-container" class="w-full px-1 md:w-11/12 mx-auto grid md:grid-cols-2 lg:grid-cols-4 gap-5 mb-6">
 
         <!-- <div class="shadow-sm">
             <div class="relative w-full">
